Tue Oct 10 14:41:49 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix documentation comment in database.h

Tue Oct 10 14:14:40 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added quartz_block_size parameter - and pass it down to the
	  constructor of a QuartzDiskTable, ready for use when the Btree
	  manager is added.

	* Removed old quartz_{diffs,modifications}.{cc,h} files - obselete.

Tue Oct 10 12:14:20 BST 2000 Olly Betts

	* Documents should now fetch in parallel pipelines with the remote
	  backend.
 
Mon Oct  9 18:13:14 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Quartz now stores general database information in record database.
	  Very close to allocating new document ID's correctly.

	* Quartz database initialisation code is separated out of table
	  manager.

	* {un,}pack_uint32 functions changed to {un,}pack_uint templates -
	  should work on different data type sizes.  Work towards using
	  whatever datatype sizes are handy, rather than relying on any
	  particular size.

Mon Oct 09 18:09:05 BST 2000 Olly Betts

	* StatsSource::set_gatherer() merged into ctor;
	  my_collection_size_is() and my_average_length_is() merged as
	  take_my_stats().

Mon Oct  9 17:19:31 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added OmFileReaderNode

Mon Oct 09 16:19:43 BST 2000 Olly Betts

	* Cleaned up members of SubMatch and subclasses.

	* Merged NetClient::set_query() and set_options().

Mon Oct 09 15:27:59 BST 2000 Olly Betts

	* Implemented OmEnquire::get_docs() - currently just fetches them
	  sequentially.

	* Removed unused max_weight element from OmQueryInternal

Mon Oct  9 14:39:34 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Part-implemented add_document and delete_document methods in
	  quartz - document data is now added, stored and deleted.  Terms are
	  not dealt with, though.

Mon Oct 09 14:22:04 BST 2000 Olly Betts
